--- a/finance.html
+++ b/finance.html
@@ -1,44 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Matched | 3T</title>
-    <link rel="icon" href="assets/logo.ico">
-    <link rel="stylesheet" href="styles/finance.css">
-</head>
-<body>
+    <link rel="icon" href="assets/logo.ico" />
+    <link rel="stylesheet" href="styles/finance.css" />
+  </head>
+  <body>
     <header class="header">
-        <div class="matched">Matched</div>
-        <div class="logo">
-            <img src="assets/logo.ico" alt="3T | logo">
-        </div>
+      <div class="matched">Matched</div>
+      <div class="logo">
+        <img src="assets/logo.ico" alt="3T | logo" />
+      </div>
     </header>
     <nav class="nav">
-        <h2>Finance Entries</h2>
-        <div class="info">
-            <div class="name" id="name">name</div>
-            <div class="email" id="email">mail</div>
-            <div class="date" id="date">date</div>
-        </div>
+      <h2>Finance Entries</h2>
+      <div class="info">
+        <div class="name" id="name">name</div>
+        <div class="email" id="email">mail</div>
+        <div class="date" id="date">date</div>
+      </div>
     </nav>
     <div class="container">
-        <div class="received entry">
-            <div class="img"><i class="fa-solid fa-indian-rupee-sign"></i></div>
-            <input type="number" id="received-amount">
-            <button id="received">Recieved</button>
+      <form id="fundsForm">
+        <div class="form-group">
+          <label for="fundsReceived">Funds Received:</label>
+          <input
+            type="number"
+            id="fundsReceived"
+            name="fundsReceived"
+            required
+          />
         </div>
-        <div class="sent entry">
-            <div class="img"><i class="fa-solid fa-indian-rupee-sign"></i></div>
-            <input type="number" id="sent-amount">
-            <button id="sent">Sent</button>
+        <div class="form-group">
+          <label for="fundsSent">Funds Sent:</label>
+          <input type="number" id="fundsSent" name="fundsSent" required />
         </div>
+        <div class="form-group">
+            <label for="accountNumber">Account Number:</label>
+            <select id="accountNumber" name="accountNumber" required>
+              <option value="" disabled selected>
+                Select account number
+              </option>
+              <option value="123456">123456</option>
+              <option value="234567">234567</option>
+              <option value="345678">345678</option>
+              <option value="456789">456789</option>
+            </select>
+          </div>
+        <button type="submit">Submit</button>
+      </form>
     </div>
     <script src="finance.js"></script>
-</body>
+  </body>
 </html>
