--- a/finance.html
+++ b/finance.html
@@ -6,7 +6,10 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
@@ -17,6 +20,10 @@
       integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css"
     />
     <title>Matched | 3T</title>
     <link rel="icon" href="assets/logo.ico" />
@@ -53,20 +60,19 @@
           <input type="number" id="fundsSent" name="fundsSent" required />
         </div>
         <div class="form-group">
-            <label for="accountNumber">Account Number:</label>
-            <select id="accountNumber" name="accountNumber" required>
-              <option value="" disabled selected>
-                Select account number
-              </option>
-              <option value="123456">123456</option>
-              <option value="234567">234567</option>
-              <option value="345678">345678</option>
-              <option value="456789">456789</option>
-            </select>
-          </div>
+          <label for="accountNumber">Account Number:</label>
+          <select id="accountNumber" name="accountNumber" required>
+            <option value="" disabled selected>Select account number</option>
+            <option value="123456">123456</option>
+            <option value="234567">234567</option>
+            <option value="345678">345678</option>
+            <option value="456789">456789</option>
+          </select>
+        </div>
         <button type="submit">Submit</button>
       </form>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="finance.js"></script>
   </body>
 </html>
