--- a/accounts.html
+++ b/accounts.html
@@ -18,7 +18,7 @@
       href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css"
     />
 
-    <title>Accounts Interface</title>
+    <title>Matched | Accounts</title>
     <link rel="icon" href="assets/logo.ico" />
     <link rel="stylesheet" href="styles/accounts.css" />
   </head>
