--- a/finance.html
+++ b/finance.html
@@ -25,7 +25,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css"
     />
-    <title>Matched | 3T</title>
+    <title>Matched | Finance</title>
     <link rel="icon" href="assets/logo.ico" />
     <link rel="stylesheet" href="styles/finance.css" />
   </head>
