--- a/cfo.html
+++ b/cfo.html
@@ -77,6 +77,9 @@
       </div>
       <div id="entries"></div>
     </div>
+    <div id="notification">
+      <i class="fa-regular fa-bell"></i>
+    </div>
     <script src="cfo.js"></script>
   </body>
 </html>
