changing name Matched -> Daily Logs

--- a/accounts.html
+++ b/accounts.html
@@ -18,13 +18,13 @@
       href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css"
     />
 
-    <title>Matched | Accounts</title>
+    <title>Accounts</title>
     <link rel="icon" href="assets/logo.ico" />
     <link rel="stylesheet" href="styles/accounts.css" />
   </head>
   <body>
     <header class="header">
-      <div class="matched">Matched</div>
+      <div class="matched">Daily Logs</div>
       <div class="logo">
         <img src="assets/logo.ico" alt="3T | logo" />
       </div>
