--- a/finance.html
+++ b/finance.html
@@ -25,13 +25,13 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css"
     />
-    <title>Matched | Finance</title>
+    <title>Finance</title>
     <link rel="icon" href="assets/logo.ico" />
     <link rel="stylesheet" href="styles/finance.css" />
   </head>
   <body>
     <header class="header">
-      <div class="matched">Matched</div>
+      <div class="matched">Daily Logs</div>
       <div class="logo">
         <img src="assets/logo.ico" alt="3T | logo" />
       </div>
