--- a/cfo.html
+++ b/cfo.html
@@ -16,14 +16,14 @@
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <title>Matched | CFO</title>
+  <title>CFO</title>
   <link rel="stylesheet" href="styles/cfo.css" />
   <link rel="icon" href="assets/logo.ico" />
 </head>
 
 <body>
   <header class="header">
-    <div class="matched">Matched</div>
+    <div class="matched">Daily Logs</div>
     <div class="logo">
       <img src="assets/logo.ico" alt="3T | logo" />
     </div>
