changing name Daily Logs -> InsightsOnAccounts

--- a/accounts.html
+++ b/accounts.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="matched">Daily Logs</div>
+      <div class="matched">InsightsOnAccounts</div>
       <div class="logo">
         <img src="assets/logo.ico" alt="3T | logo" />
       </div>
