--- a/cfo.html
+++ b/cfo.html
@@ -23,7 +23,7 @@
 
 <body>
   <header class="header">
-    <div class="matched">Daily Logs</div>
+    <div class="matched">InsightsOnAccounts</div>
     <div class="logo">
       <img src="assets/logo.ico" alt="3T | logo" />
     </div>
