--- a/finance.html
+++ b/finance.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="matched">Daily Logs</div>
+      <div class="matched">InsightsOnAccounts</div>
       <div class="logo">
         <img src="assets/logo.ico" alt="3T | logo" />
       </div>
