updated users table in matched now department is fetched from the users table if email and password exists in it

--- a/index.html
+++ b/index.html
@@ -31,49 +31,20 @@
     </header>
     <div class="container">
       <form id="loginForm">
-        Select department
-
-        <div class="radio-grp">
-          <input
-            type="radio"
-            id="finance"
-            name="department"
-            value="finance"
-            class="custom-radio"
-          />
-          <label for="finance" class="custom-label input">Finance</label>
-          <input
-            type="radio"
-            id="accounts"
-            name="department"
-            value="accounts"
-            class="custom-radio"
-          />
-          <label for="accounts" class="custom-label input">Accounts</label>
-          <input
-            type="radio"
-            id="cfo"
-            name="department"
-            value="cfo"
-            class="custom-radio"
-          />
-          <label for="cfo" class="custom-label input">CFO</label>
-        </div>
-
         <div for="">Enter Name and Email</div>
         <div class="inputs">
-          <input
-            type="text"
-            id="name"
-            class="input"
-            placeholder="Name"
-            required
-          />
           <input
             type="email"
             id="email"
             class="input"
             placeholder="Email"
+            required
+          />
+          <input
+            type="password"
+            id="password"
+            class="input"
+            placeholder="Password"
             required
           />
         </div>
