adding jsonwebtoken to making login secure

--- a/accounts.html
+++ b/accounts.html
@@ -110,7 +110,7 @@
         <button type="submit">Add Entry</button>
       </form>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="accounts.js"></script>
   </body>
