--- a/finance.html
+++ b/finance.html
@@ -39,7 +39,6 @@
     <nav class="nav">
       <h2>Finance Entries</h2>
       <div class="info">
-        <div class="name" id="name">name</div>
         <div class="email" id="email">mail</div>
         <div class="date" id="date">date</div>
       </div>
@@ -72,6 +71,7 @@
         <button type="submit">Submit</button>
       </form>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="finance.js"></script>
   </body>
