making finance and accounts and index.html responsive and final

--- a/accounts.html
+++ b/accounts.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="matched">InsightsOnAccounts</div>
+      <div class="matched"><a href="/index.html">InsightsOnAccounts</a></div>
       <div class="logo">
         <img src="assets/logo.ico" alt="3T | logo" />
       </div>
@@ -32,9 +32,7 @@
     <nav class="nav">
       <h2>Accounts Entries</h2>
       <div class="info">
-        <div class="name" id="name">name</div>
         <div class="email" id="email">mail</div>
-        <div class="date" id="date">date</div>
       </div>
     </nav>
     <div class="container">
