--- a/finance.html
+++ b/finance.html
@@ -31,7 +31,9 @@
   </head>
   <body>
     <header class="header">
-      <div class="matched">InsightsOnAccounts</div>
+      <div class="matched"> 
+        <a href="/index.html">InsightsOnAccounts</a>  
+      </div>
       <div class="logo">
         <img src="assets/logo.ico" alt="3T | logo" />
       </div>
@@ -40,7 +42,6 @@
       <h2>Finance Entries</h2>
       <div class="info">
         <div class="email" id="email">mail</div>
-        <div class="date" id="date">date</div>
       </div>
     </nav>
     <div class="container">
