--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     <div class="container">
       <form id="loginForm">
-        <div for="">Enter Name and Email</div>
+        <div for="">Enter Email And Password</div>
         <div class="inputs">
           <input
             type="email"
