--- a/cfo.html
+++ b/cfo.html
@@ -73,7 +73,7 @@
   <div class="today">
     <div class="heading">
       <h2>Today's Entries</h2>
-      <div id="date">date</div>
+      <div id="email">date</div>
     </div>
     <div id="entries"></div>
   </div>
@@ -88,6 +88,7 @@
     </div>
     <div id="bell"><i class="fa-regular fa-bell"></i></div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
   <script src="cfo.js"></script>
 </body>
 
