--- a/cfo.html
+++ b/cfo.html
@@ -23,7 +23,7 @@
 
 <body>
   <header class="header">
-    <div class="matched">InsightsOnAccounts</div>
+    <div class="matched"><a href="/index.html">InsightsOnAccounts</a></div>
     <div class="logo">
       <img src="assets/logo.ico" alt="3T | logo" />
     </div>
@@ -86,7 +86,7 @@
     <div class="hidden" id="requests">
 
     </div>
-    <div id="bell"><i class="fa-regular fa-bell"></i></div>
+    <div id="bell" class="hidden"><i class="fa-regular fa-bell"></i></div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
   <script src="cfo.js"></script>
