change password functionality is working for accounts and finance interface

--- a/finance.html
+++ b/finance.html
@@ -41,6 +41,7 @@
     <nav class="nav">
       <h2>Finance Entries</h2>
       <div class="info">
+        <div id="user"><i class="fa-solid fa-user"></i></div>
         <div class="email" id="email">mail</div>
       </div>
     </nav>
