--- a/accounts.html
+++ b/accounts.html
@@ -15,6 +15,13 @@
     />
     <link
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css"
     />
 
@@ -32,6 +39,7 @@
     <nav class="nav">
       <h2>Accounts Entries</h2>
       <div class="info">
+        <div id="user"><i class="fa-solid fa-user"></i></div>
         <div class="email" id="email">mail</div>
       </div>
     </nav>
