fetching users from data base and rendering them in all users with style

--- a/cfo.html
+++ b/cfo.html
@@ -82,14 +82,20 @@
   </div>
   <div id="notification">
     <div id="header">
-      <span>Requests</span>
+      <span>Users</span>
       <span id="close"><i class="fa-solid fa-xmark"></i></span>
     </div>
-    <div id="notification_badge" class="hidden"></div>
-    <div class="hidden" id="requests">
-
+    <div id="allUsers">
+      <div>
+        Finance 
+        <div id="financeUsers"></div>
+      </div>
+      <div>
+        Accounts 
+        <div id="accountsUsers"></div>
+      </div>
     </div>
-    <div id="bell" class="hidden"><i class="fa-regular fa-bell"></i></div>
+    <div id="gear" ><i class="fa-solid fa-user-gear"></i></i></div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
