--- a/cfo.html
+++ b/cfo.html
@@ -72,7 +72,7 @@
   </div>
   <div class="today">
     <div class="heading">
-      <h2>Today's Entries</h2>
+      <h2>Data</h2>
       <div class="user-info">
         <div id="user"><i class="fa-solid fa-user"></i></div>
         <div id="email">date</div>
