changing Finance Entries -> Finance Data and Accounts Entries -> Accounts Data

--- a/finance.html
+++ b/finance.html
@@ -39,7 +39,7 @@
       </div>
     </header>
     <nav class="nav">
-      <h2>Finance Entries</h2>
+      <h2>Finance Data</h2>
       <div class="info">
         <div id="user"><i class="fa-solid fa-user"></i></div>
         <div class="email" id="email">mail</div>
