--- a/accounts.html
+++ b/accounts.html
@@ -37,7 +37,7 @@
       </div>
     </header>
     <nav class="nav">
-      <h2>Accounts Entries</h2>
+      <h2>Accounts Data</h2>
       <div class="info">
         <div id="user"><i class="fa-solid fa-user"></i></div>
         <div class="email" id="email">mail</div>
