--- a/cfo.html
+++ b/cfo.html
@@ -31,7 +31,7 @@
   <nav class="nav">
     <h2>CFO's Desk</h2>
     <div class="info">
-      <select class="info" id="accountNumber" name="accountNumber" required>
+      <select class="info" id="accountNumber" name="accountNumber" required title="">
         <option value="" disabled selected>Select account number</option>
         <option value="4583">4583</option>
         <option value="0163">0163</option>
@@ -100,6 +100,10 @@
   <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="cfo.js"></script>
+  
+<script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
+<script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>
+<script src="myTippy.js"></script>
 </body>
 
 </html>
