--- a/finance.html
+++ b/finance.html
@@ -62,7 +62,7 @@
         </div>
         <div class="form-group">
           <label for="accountNumber">Account Number:</label>
-          <select id="accountNumber" name="accountNumber" required>
+          <select id="accountNumber" name="accountNumber" required title="">
             <option value="" disabled selected>Select account number</option>
             <option value="4583">4583</option>
             <option value="0163">0163</option>
@@ -76,5 +76,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="finance.js"></script>
+    <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
+    <script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>
+    <script src="myTippy.js"></script>
   </body>
 </html>
