--- a/finance.html
+++ b/finance.html
@@ -30,6 +30,10 @@
     <link rel="stylesheet" href="styles/finance.css" />
   </head>
   <body>
+    <div class="animation-container" style="width: 100vw; height: 100vh;">
+      <img src="assets/gif.webp" >
+   </div>
+   <div class="content">
     <header class="header">
       <div class="matched"> 
         <a href="/index.html">InsightsOnAccounts</a>  
@@ -73,6 +77,7 @@
         <button type="submit">Submit</button>
       </form>
     </div>
+   </div>
     <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="finance.js"></script>
