--- a/public/index.html
+++ b/public/index.html
@@ -19,14 +19,14 @@
     />
 
     <title>3T</title>
-    <link rel="icon" href="./assets/logo.ico" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="icon" href="http://16.171.64.239/assets/logo.ico" />
+    <link rel="stylesheet" href="http://16.171.64.239/styles/style.css" />
   </head>
   <body>
     <header class="header">
       <div class="matched">InsightsOnAccounts</div>
       <div class="logo">
-        <img src="./assets/logo.ico" alt="3T | logo" />
+        <img src="http://16.171.64.239/assets/logo.ico" alt="3T | logo" />
       </div>
     </header>
     <div class="container">
@@ -54,7 +54,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="./script.js">
+    <script src="http://16.171.64.239/script.js">
     </script>
   </body>
 </html>
