changing http://IP/* -> ./*

--- a/cfo.html
+++ b/cfo.html
@@ -17,19 +17,19 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" />
   <title>CFO</title>
-  <link rel="stylesheet" href="http://16.171.64.239/styles/cfo.css" />
-  <link rel="icon" href="http://16.171.64.239/assets/logo.ico" />
+  <link rel="stylesheet" href="./styles/cfo.css" />
+  <link rel="icon" href="./assets/logo.ico" />
 </head>
 
 <body>
   <div class="animation-container" style="width: 100vw; height: 100vh;">
-    <img src="http://16.171.64.239/assets/gif.webp" >
+    <img src="./assets/gif.webp" >
  </div>
   <div class="content">
     <header class="header">
-      <div class="matched"><a href="http://16.171.64.239/index.html">InsightsOnAccounts</a></div>
+      <div class="matched"><a href="./index.html">InsightsOnAccounts</a></div>
       <div class="logo">
-        <img src="http://16.171.64.239/assets/logo.ico" alt="3T | logo" />
+        <img src="./assets/logo.ico" alt="3T | logo" />
       </div>
     </header>
     <nav class="nav">
@@ -104,11 +104,11 @@
   </div>
   <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="http://16.171.64.239/cfo.js"></script>
+  <script src="./cfo.js"></script>
   
 <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
 <script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>
-<script src="http://16.171.64.239/myTippy.js"></script>
+<script src="./myTippy.js"></script>
 </body>
 
 </html>
