--- a/accounts.html
+++ b/accounts.html
@@ -26,18 +26,18 @@
     />
 
     <title>Accounts</title>
-    <link rel="icon" href="http://16.171.64.239/assets/logo.ico" />
-    <link rel="stylesheet" href="http://16.171.64.239/styles/accounts.css" />
+    <link rel="icon" href="./assets/logo.ico" />
+    <link rel="stylesheet" href="./styles/accounts.css" />
   </head>
   <body>
     <div class="animation-container" style="width: 100vw; height: 100vh;">
-      <img src="http://16.171.64.239/assets/gif.webp">
+      <img src="./assets/gif.webp">
    </div>
     <div class="content">
       <header class="header">
-        <div class="matched"><a href="http://16.171.64.239/index.html">InsightsOnAccounts</a></div>
+        <div class="matched"><a href="./index.html">InsightsOnAccounts</a></div>
         <div class="logo">
-          <img src="http://16.171.64.239/assets/logo.ico" alt="3T | logo" />
+          <img src="./assets/logo.ico" alt="3T | logo" />
         </div>
       </header>
       <nav class="nav">
@@ -123,9 +123,9 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="http://16.171.64.239/accounts.js"></script>
+    <script src="./accounts.js"></script>
     <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
     <script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>
-    <script src="http://16.171.64.239/myTippy.js"></script>
+    <script src="./myTippy.js"></script>
   </body>
 </html>
