--- a/finance.html
+++ b/finance.html
@@ -26,20 +26,20 @@
       href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css"
     />
     <title>Finance</title>
-    <link rel="icon" href="http://16.171.64.239/assets/logo.ico" />
-    <link rel="stylesheet" href="http://16.171.64.239/styles/finance.css" />
+    <link rel="icon" href="./assets/logo.ico" />
+    <link rel="stylesheet" href="./styles/finance.css" />
   </head>
   <body>
     <div class="animation-container" style="width: 100vw; height: 100vh;">
-      <img src="http://16.171.64.239/assets/gif.webp" >
+      <img src="./assets/gif.webp" >
    </div>
    <div class="content">
     <header class="header">
       <div class="matched"> 
-        <a href="http://16.171.64.239/index.html">InsightsOnAccounts</a>  
+        <a href="./index.html">InsightsOnAccounts</a>  
       </div>
       <div class="logo">
-        <img src="http://16.171.64.239/assets/logo.ico" alt="3T | logo" />
+        <img src="./assets/logo.ico" alt="3T | logo" />
       </div>
     </header>
     <nav class="nav">
@@ -80,9 +80,9 @@
    </div>
     <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="http://16.171.64.239/finance.js"></script>
+    <script src="./finance.js"></script>
     <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
     <script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>
-    <script src="http://16.171.64.239/myTippy.js"></script>
+    <script src="./myTippy.js"></script>
   </body>
 </html>
